# bet_project

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
notebooks/: 00_feasability.ipynb
